plugins {
    id("java")
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = "com.enthusiasm"
version = "0.0.1-SNAPSHOT"

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation project(":common:common-jackson")
    implementation project(":common:common-simple-web")
    implementation project(":common:common-saga")
    implementation project(":common:common-open-telemetry")
    implementation project(":core-kafka:consumer")
    implementation project(":core-kafka:producer")
    implementation project(":core-events")
    implementation project(":core-outbox")
    implementation project(":core-distpatcher")

    implementation('org.apache.kafka:kafka-clients:3.7.1') {
        transitive = true
    }

    implementation 'io.opentelemetry:opentelemetry-api:1.37.0'
    implementation 'io.opentelemetry:opentelemetry-sdk-trace:1.37.0'
    implementation 'io.opentelemetry:opentelemetry-extension-annotations:1.18.0'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.37.0'
    implementation 'io.opentelemetry:opentelemetry-sdk:1.37.0'
    runtimeOnly 'io.opentelemetry:opentelemetry-semconv:1.29.0-alpha'
    implementation 'io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.37.0'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "org.flywaydb:flyway-database-postgresql"

    testImplementation(platform("org.junit:junit-bom:5.9.1"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.test {
    useJUnitPlatform()
}